[package]
name = "website"
version = "0.1.0"
authors = ["Ashhhleyyy <ash@ashhhleyyy.dev>"]
edition = "2021"

[workspace]
members = [".", "assetwrap"]

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.11"
rust-embed = "6"
mime_guess = "2"
tower-http = { version = "0.2", features = ["trace"] }
hex = "0.4"
fastrand = "1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
thiserror = "1"
lazy_static = "1"
image = { version = "0.24", default-features = false, features = ["png"]}
regex = "1"
comrak = "0.12"
lol_html = "0.3.1"
