[package]
name = "website"
version = "0.1.0"
authors = ["Ashhhleyyy <ash@ashhhleyyy.dev>"]
edition = "2021"

[workspace]
members = [".", "assetwrap"]

[dependencies]
assetwrap = { path = "assetwrap/", default-features = false }
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.11"
rust-embed = "6"
mime_guess = "2"
tower-http = { version = "0.2", features = ["trace", "fs"] }
hex = "0.4"
fastrand = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1"
lazy_static = "1"
image = { version = "0.24", default-features = false, features = ["png"]}
regex = "1"
comrak = "0.12"
lol_html = "0.3.1"
serde_json = "1.0.85"
once_cell = "1.14.0"
toml = "0.5.9"
extract-frontmatter = "4.1.1"
