[package]
name = "website"
version = "0.1.0"
authors = ["Ashhhleyyy <ash@ashhhleyyy.dev>"]
edition = "2021"

[workspace]
members = [".", "assetwrap"]

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.5", features = ["trace", "fs"] }
hex = "0.4"
fastrand = "2"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "serde"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"], default-features = false }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"]}
regex = "1"
comrak = "0.24"
lol_html = "1.2"
serde_json = "1.0"
once_cell = "1.19"
toml = "0.8"
extract-frontmatter = "4.1"
maud = "0.26"
rss = "2.0.8"
