[package]
name = "assetwrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.1.0"
clap = { version = "3.2.20", features = ["derive"] }
color-eyre = "0.6.2"
globset = { version = "0.4.9", features = ["serde1"] }
hex = "0.4.3"
image = { git = "https://github.com/image-rs/image.git", features = ["avif-encoder", "webp-encoder"] }
lightningcss = "1.0.0-alpha.35"
mime_guess = "2.0.4"
rayon = "1.5.3"
rust-s3 = { version = "0.32.3", features = ["sync-native-tls", "tags"], default-features = false, optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.5"
walkdir = "2.3.2"

[features]
default = ["rust-s3"]
