[package]
name = "assetwrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
globset = { version = "0.4", features = ["serde1"] }
hex = "0.4"
image = { version = "0.25" }
lightningcss = "1.0.0-alpha.57"
mime_guess = "2"
rayon = "1.10"
rust-s3 = { version = "0.34", features = ["sync-native-tls", "tags"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"

[features]
default = ["rust-s3"]
